Icon e imagem padrão adicionadas.

--- a/acao.html
+++ b/acao.html
@@ -141,7 +141,8 @@
                             <li class="list-group-item"><a href="#cm">Chainsaw Man</a></li>
                             <li class="list-group-item"><a href="#fa">Fullmetal Alchemist</a></li>
                             <li class="list-group-item"><a href="#hxh">Hunter x Hunter</a></li>
-                            <li class="list-group-item"><a href="#jba">JoJo no Kimyou na Bouken Part 7: Steel Ball Run</a></li>
+                            <li class="list-group-item"><a href="#jba">JoJo no Kimyou na Bouken Part 7: Steel Ball
+                                    Run</a></li>
                             <li class="list-group-item"><a href="#jjk">Jujutsu Kaisen</a></li>
                             <li class="list-group-item"><a href="acao2.html#kny">Kimetsu no Yaiba</a></li>
                             <li class="list-group-item"><a href="acao2.html#mp">Martial Peak</a></li>
@@ -176,7 +177,7 @@
                 <img src="Imagens/acao/berserk.jpg" class="tamanhoImg" alt="Berserk">
             </div>
             <div class="col-md-6 scrollpsy-example" data-bs-spy="scroll" data-bs-target="#list-example"
-                data-bs-smooth-scroll="true"  id="berserk">
+                data-bs-smooth-scroll="true" id="berserk">
                 <h4 class="text-left">Berserk</h4><br>
                 <h6>392 Capitulos</h6><br>
                 <p>Gatts é um sobrevivente que vaga pelo mundo à procura de respostas. Antigo membro do ext "Bando dos
@@ -185,7 +186,9 @@
                     que os acontecimentos vão se completando. É uma obra dedicada à eterna luta do Catolicismo contra
                     Paganismo....</p>
                 <div class="alert alert-dark configAlert" role="alert">
-                    <button type="button" class="btn btn-dark" disabled><h6 class="display-6 fw-bold">18</h6></button> Não recomendado para menores de 18
+                    <button type="button" class="btn btn-dark" disabled>
+                        <h6 class="display-6 fw-bold">18</h6>
+                    </button> Não recomendado para menores de 18
                 </div>
                 <p>Onde ler: MangáLivre</p>
             </div>
@@ -199,10 +202,19 @@
             <div class="col-md-6" id="bc">
                 <h4 class="text-left">Black Clover</h4><br>
                 <h6>368 Capitulos</h6><br>
-                <p>Em um mundo cheio de magia, Asta – uma órfã que é excessivamente barulhenta e enérgica – não possui absolutamente nenhuma. Apesar disso, ele sonha em se tornar o Rei Mago, um título concedido ao mago mais forte do Reino de Trevo. Possuindo a mesma aspiração, o amigo de infância de Asta e rival Yuno foi abençoado com a habilidade de controlar a poderosa magia do vento. Mesmo com essa lacuna opressora entre eles, na esperança de de alguma forma despertar suas habilidades mágicas e alcançar Yuno, Asta treina seu corpo incansavelmente todos os dias. No Reino do Trevo, quando uma pessoa completa 15 anos, é hora de receber seu Grimoire, um item que permite ao seu portador usar sua magia em sua capacidade total.
+                <p>Em um mundo cheio de magia, Asta – uma órfã que é excessivamente barulhenta e enérgica – não possui
+                    absolutamente nenhuma. Apesar disso, ele sonha em se tornar o Rei Mago, um título concedido ao mago
+                    mais forte do Reino de Trevo. Possuindo a mesma aspiração, o amigo de infância de Asta e rival Yuno
+                    foi abençoado com a habilidade de controlar a poderosa magia do vento. Mesmo com essa lacuna
+                    opressora entre eles, na esperança de de alguma forma despertar suas habilidades mágicas e alcançar
+                    Yuno, Asta treina seu corpo incansavelmente todos os dias. No Reino do Trevo, quando uma pessoa
+                    completa 15 anos, é hora de receber seu Grimoire, um item que permite ao seu portador usar sua magia
+                    em sua capacidade total.
                 </p>
                 <div class="alert alert-warning configAlert" role="alert">
-                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">14</h6></button> Não recomendado para menores de 14
+                    <button type="button" class="btn btn-warning " disabled>
+                        <h6 class="display-6 fw-bold">14</h6>
+                    </button> Não recomendado para menores de 14
                 </div>
                 <p>Onde ler: MangáLivre</p>
             </div>
@@ -222,7 +234,9 @@
                     envolver com o mundo espiritual, ele acaba no meio de uma trama que ameaça a existência de ambos os
                     mundos.</p>
                 <div class="alert alert-warning configAlert" role="alert">
-                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold ">13</h6></button> Não recomendado para menores de 13
+                    <button type="button" class="btn btn-warning " disabled>
+                        <h6 class="display-6 fw-bold ">13</h6>
+                    </button> Não recomendado para menores de 13
                 </div>
                 <p>Onde ler: MangáLivre</p>
             </div>
@@ -241,7 +255,9 @@
                     algum. No entanto, ele não desiste de seu grande sonho e fará de todo o possível para ser o maior
                     herói que o mundo já conheceu!</p>
                 <div class="alert alert-warning configAlert" role="alert">
-                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">12</h6></button> Não recomendado para menores de 12
+                    <button type="button" class="btn btn-warning " disabled>
+                        <h6 class="display-6 fw-bold">12</h6>
+                    </button> Não recomendado para menores de 12
                 </div>
                 <p>Onde ler: MangáLivre</p>
             </div>
@@ -255,9 +271,18 @@
             <div class="col-md-6" id="bsd">
                 <h4 class="text-left">Bungou Stray Dogs</h4><br>
                 <h6>126 Capitulos</h6><br>
-                <p>Nakajima Atsushi foi expulso de seu orfanato, e agora ele não tem nenhum lugar para ir e sem comida. Enquanto ele está de pé perto de um rio, à beira de morrer de fome, ele resgata um homem que por capricho tentava o suicídio. Esse homem é Dazai Osamu, e ele e seu parceiro Kunikida são membros de uma agência de detetives muito especial. Eles têm poderes sobrenaturais, e lidam com casos que são muito perigosos para a polícia ou as forças armadas. Eles estão rastreando um tigre que tem aparecido na área recentemente, em torno do mesmo tempo em que Atsushi veio para a área. O tigre parece ter uma conexão com Atsushi, e pelo tempo que o caso seja resolvido, é evidente que o futuro de Atsushi vai envolver muito mais o Dazai e o resto dos detetives!</p>
+                <p>Nakajima Atsushi foi expulso de seu orfanato, e agora ele não tem nenhum lugar para ir e sem comida.
+                    Enquanto ele está de pé perto de um rio, à beira de morrer de fome, ele resgata um homem que por
+                    capricho tentava o suicídio. Esse homem é Dazai Osamu, e ele e seu parceiro Kunikida são membros de
+                    uma agência de detetives muito especial. Eles têm poderes sobrenaturais, e lidam com casos que são
+                    muito perigosos para a polícia ou as forças armadas. Eles estão rastreando um tigre que tem
+                    aparecido na área recentemente, em torno do mesmo tempo em que Atsushi veio para a área. O tigre
+                    parece ter uma conexão com Atsushi, e pelo tempo que o caso seja resolvido, é evidente que o futuro
+                    de Atsushi vai envolver muito mais o Dazai e o resto dos detetives!</p>
                 <div class="alert alert-warning configAlert" role="alert">
-                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">14</h6></button> Não recomendado para menores de 14
+                    <button type="button" class="btn btn-warning " disabled>
+                        <h6 class="display-6 fw-bold">14</h6>
+                    </button> Não recomendado para menores de 14
                 </div>
                 <p>Onde ler: MangáLivre</p>
             </div>
@@ -278,7 +303,9 @@
                     para revivê-lo. Mas, agora o Denji renasceu como um hibrido de demônio com humano... Agora ele é o
                     "Chainsaw Man"!!!</p>
                 <div class="alert alert-danger configAlert" role="alert">
-                    <button type="button" class="btn btn-danger " disabled><h6 class="display-6 fw-bold">16</h6></button> Não recomendado para menores de 16
+                    <button type="button" class="btn btn-danger " disabled>
+                        <h6 class="display-6 fw-bold">16</h6>
+                    </button> Não recomendado para menores de 16
                 </div>
                 <p>Onde ler: MangáLivre</p>
             </div>
@@ -292,9 +319,18 @@
             <div class="col-md-6" id="fa">
                 <h4 class="text-left">Fullmetal Alchemist</h4><br>
                 <h6>110 Capitulos</h6><br>
-                <p>As regras do estado da alquimia que para ganhar algo, deve-se perder alguma coisa de igual valor. A alquimia é o processo de desmontar e reconstruir um objeto em uma entidade diferente, com as regras da alquimia para governar este procedimento. No entanto, existe um objeto que pode trazer qualquer alquimista acima dessas regras, o objeto conhecido como Pedra Filosofal. O jovem Edward Elric é um alquimista particularmente talentoso que através de um acidente anos atrás perdeu seu irmão mais novo, Alphonse e uma de suas pernas. Sacrificar um de seus braços assim, ele usou a alquimia para ligar a alma de seu irmão a uma armadura. Isso levou ao início de sua jornada para recuperar seus corpos, em busca da lendária Pedra Filosofal.</p>
+                <p>As regras do estado da alquimia que para ganhar algo, deve-se perder alguma coisa de igual valor. A
+                    alquimia é o processo de desmontar e reconstruir um objeto em uma entidade diferente, com as regras
+                    da alquimia para governar este procedimento. No entanto, existe um objeto que pode trazer qualquer
+                    alquimista acima dessas regras, o objeto conhecido como Pedra Filosofal. O jovem Edward Elric é um
+                    alquimista particularmente talentoso que através de um acidente anos atrás perdeu seu irmão mais
+                    novo, Alphonse e uma de suas pernas. Sacrificar um de seus braços assim, ele usou a alquimia para
+                    ligar a alma de seu irmão a uma armadura. Isso levou ao início de sua jornada para recuperar seus
+                    corpos, em busca da lendária Pedra Filosofal.</p>
                 <div class="alert alert-warning configAlert" role="alert">
-                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">14</h6></button> Não recomendado para menores de 14
+                    <button type="button" class="btn btn-warning " disabled>
+                        <h6 class="display-6 fw-bold">14</h6>
+                    </button> Não recomendado para menores de 14
                 </div>
                 <p>Onde ler: MangáLivre</p>
             </div>
@@ -308,9 +344,18 @@
             <div class="col-md-6" id="hxh">
                 <h4 class="text-left">Hunter x Hunter</h4><br>
                 <h6>400 Capitulos</h6><br>
-                <p>Os caçadores são uma raça especial, dedicada a rastrear tesouros, feras mágicas e até outros homens. Mas essas atividades exigem uma licença, e menos de uma em cem mil pode passar no exaustivo exame de qualificação. Aqueles que passam ganham acesso a áreas restritas, armazenamentos incríveis de informações e o direito de se chamarem Caçadores. Gon Freecss, um menino de 12 anos com a esperança de encontrar seu pai desaparecido, parte em uma missão para fazer o Exame Hunter. Ao longo do caminho, ele conhece outros candidatos ao exame Hunter: Kurapika, Leorio e Killua. Pode Gon passar nos rigorosos desafios do exame Hunter e se tornar o melhor caçador do mundo? Sua jornada selvagem e épica está prestes a começar.</p>
+                <p>Os caçadores são uma raça especial, dedicada a rastrear tesouros, feras mágicas e até outros homens.
+                    Mas essas atividades exigem uma licença, e menos de uma em cem mil pode passar no exaustivo exame de
+                    qualificação. Aqueles que passam ganham acesso a áreas restritas, armazenamentos incríveis de
+                    informações e o direito de se chamarem Caçadores. Gon Freecss, um menino de 12 anos com a esperança
+                    de encontrar seu pai desaparecido, parte em uma missão para fazer o Exame Hunter. Ao longo do
+                    caminho, ele conhece outros candidatos ao exame Hunter: Kurapika, Leorio e Killua. Pode Gon passar
+                    nos rigorosos desafios do exame Hunter e se tornar o melhor caçador do mundo? Sua jornada selvagem e
+                    épica está prestes a começar.</p>
                 <div class="alert alert-warning configAlert" role="alert">
-                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">14</h6></button> Não recomendado para menores de 14
+                    <button type="button" class="btn btn-warning " disabled>
+                        <h6 class="display-6 fw-bold">14</h6>
+                    </button> Não recomendado para menores de 14
                 </div>
                 <p>Onde ler: MangáLivre</p>
             </div>
@@ -325,15 +370,19 @@
                 <h4 class="text-left">JoJo no Kimyou na Bouken Part 7: Steel Ball Run<br>
                     <h6>98 Capitulos</h6><br>
                     <p>Originalmente apresentado como uma história relacionada, esta série foi mais tarde declarada
-                    oficialmente uma parte do enredo JoJo, assim se tornado a parte 7. A série é estrelada por Gyro
-                    Zeppeli, que utiliza um conjunto de esferas de aço que giram incrivelmente rápido e Johnny Joestar
-                    (Jonathan Joestar), um ex-jóquei hot-shot que foi prejudicado por uma emboscada e perdeu sua fama e
-                    fortuna. Eles correm, junto com outros jóqueis, em uma louca corrida através da América por um
-                    prêmio de 50 milhões de dólares, que lembra a The Cannonball Run!</p>
+                        oficialmente uma parte do enredo JoJo, assim se tornado a parte 7. A série é estrelada por Gyro
+                        Zeppeli, que utiliza um conjunto de esferas de aço que giram incrivelmente rápido e Johnny
+                        Joestar
+                        (Jonathan Joestar), um ex-jóquei hot-shot que foi prejudicado por uma emboscada e perdeu sua
+                        fama e
+                        fortuna. Eles correm, junto com outros jóqueis, em uma louca corrida através da América por um
+                        prêmio de 50 milhões de dólares, que lembra a The Cannonball Run!</p>
                     <div class="alert alert-danger configAlert" role="alert">
-                    <button type="button" class="btn btn-danger " disabled><h6 class="display-6 fw-bold">16</h6></button> Não recomendado para menores de 16
-                </div>
-                <p>Onde ler: MangáLivre</p>
+                        <button type="button" class="btn btn-danger " disabled>
+                            <h6 class="display-6 fw-bold">16</h6>
+                        </button> Não recomendado para menores de 16
+                    </div>
+                    <p>Onde ler: MangáLivre</p>
             </div>
             <hr class="linha">
         </div>
@@ -350,27 +399,29 @@
                     clube apenas por diversão, tudo fica sério quando um espírito de verdade aparece na escola! A vida
                     está prestes a se tornar muito interessante na Escola Sugisawa...</p>
                 <div class="alert alert-danger configAlert" role="alert">
-                    <button type="button" class="btn btn-danger " disabled><h6 class="display-6 fw-bold">16</h6></button> Não recomendado para menores de 16
+                    <button type="button" class="btn btn-danger " disabled>
+                        <h6 class="display-6 fw-bold">16</h6>
+                    </button> Não recomendado para menores de 16
                 </div>
                 <p>Onde ler: MangáLivre</p>
             </div>
             <hr class="linha">
         </div>
         <nav aria-label="Page navigation example">
-          <ul class="pagination justify-content-center">
-            <li class="page-item">
-              <a class="page-link" href="#" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-              </a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="acao2.html">2</a></li>
-            <li class="page-item">
-              <a class="page-link" href="acao2.html" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-              </a>
-            </li>
-          </ul>
+            <ul class="pagination justify-content-center">
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="acao2.html">2</a></li>
+                <li class="page-item">
+                    <a class="page-link" href="acao2.html" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            </ul>
         </nav>
     </div>
     <!-- Fim container mangás-->
