--- a/acao2.html
+++ b/acao2.html
@@ -141,7 +141,8 @@
                             <li class="list-group-item"><a href="acao.html#cm">Chainsaw Man</a></li>
                             <li class="list-group-item"><a href="acao.html#fa">Fullmetal Alchemist</a></li>
                             <li class="list-group-item"><a href="acao.html#hxh">Hunter x Hunter</a></li>
-                            <li class="list-group-item"><a href="acao.html#jba">JoJo no Kimyou na Bouken Part 7: Steel Ball Run</a></li>
+                            <li class="list-group-item"><a href="acao.html#jba">JoJo no Kimyou na Bouken Part 7: Steel
+                                    Ball Run</a></li>
                             <li class="list-group-item"><a href="acao.html#jjk">Jujutsu Kaisen</a></li>
                             <li class="list-group-item"><a href="#kny">Kimetsu no Yaiba</a></li>
                             <li class="list-group-item"><a href="#mp">Martial Peak</a></li>
@@ -184,7 +185,9 @@
                     acaba se transformando em um demônio. Então, o protagonista, Tanjiro, sai em uma jornada para tentar
                     achar uma ''cura'' para a sua irmã...</p>
                 <div class="alert alert-danger configAlert" role="alert">
-                    <button type="button" class="btn btn-danger" disabled><h6 class="display-6 fw-bold">16</h6></button> Não recomendado para menores de 16
+                    <button type="button" class="btn btn-danger" disabled>
+                        <h6 class="display-6 fw-bold">16</h6>
+                    </button> Não recomendado para menores de 16
                 </div>
                 <p>Onde ler: MangáLivre</p>
             </div>
@@ -198,9 +201,15 @@
             <div class="col-md-6" id="mp">
                 <h4 class="text-left">Matial Peak</h4><br>
                 <h6>3587 Capitulos</h6><br>
-                <p>A jornada para o pico marcial é solitária, solitária e longa. Diante da adversidade, você deve sobreviver e permanecer inflexível. Só então você pode romper e continuar em sua jornada para se tornar o mais forte. O High Heaven Pavilion testa seus discípulos da maneira mais dura possível para prepará-los para tal jornada. Um dia, o humilde varredor Yang Kai conseguiu obter um misterioso livro negro, colocando-o no caminho para o auge do mundo marcial.</p>
+                <p>A jornada para o pico marcial é solitária, solitária e longa. Diante da adversidade, você deve
+                    sobreviver e permanecer inflexível. Só então você pode romper e continuar em sua jornada para se
+                    tornar o mais forte. O High Heaven Pavilion testa seus discípulos da maneira mais dura possível para
+                    prepará-los para tal jornada. Um dia, o humilde varredor Yang Kai conseguiu obter um misterioso
+                    livro negro, colocando-o no caminho para o auge do mundo marcial.</p>
                 <div class="alert alert-warning configAlert" role="alert">
-                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">14</h6></button> Não recomendado para menores de 14
+                    <button type="button" class="btn btn-warning " disabled>
+                        <h6 class="display-6 fw-bold">14</h6>
+                    </button> Não recomendado para menores de 14
                 </div>
                 <p>Onde ler: MangáLivre</p>
             </div>
@@ -214,7 +223,7 @@
             <div class="col-md-6" id="n">
                 <h4 class="text-left">Naruto</h4><br>
                 <h6>718 Capitulos</h6><br>
-                    <p>Naruto Uzumaki é um menino que vive em Konohagakure no Sato ou simplesmente Konoha ou Vila Oculta da
+                <p>Naruto Uzumaki é um menino que vive em Konohagakure no Sato ou simplesmente Konoha ou Vila Oculta da
                     Folha, a vila ninja do País do Fogo. Quando ainda bebê, Naruto teve aprisionada em seu corpo a
                     Kyuubi no Youko por Minato Namikaze (quarto Hokage, e seu pai), com a finalidade de salvar a Vila da
                     Folha. Desde então, Naruto é visto por muitas pessoas como um monstro, não só pelos familiares das
@@ -222,7 +231,9 @@
                     é extremamente hiperativo, incompreendido e solitário. Naruto sonha em se tornar o Hokage de sua
                     vila, um ninja poderoso e respeitado, para assim poder ser reconhecido por todos.</p>
                 <div class="alert alert-warning configAlert" role="alert">
-                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold ">14</h6></button> Não recomendado para menores de 14
+                    <button type="button" class="btn btn-warning " disabled>
+                        <h6 class="display-6 fw-bold ">14</h6>
+                    </button> Não recomendado para menores de 14
                 </div>
                 <p>Onde ler: MangáLivre</p>
             </div>
@@ -236,9 +247,16 @@
             <div class="col-md-6" id="op">
                 <h4 class="text-left">One piece</h4><br>
                 <h6>1095 Capitulos</h6><br>
-                <p>No mundo de One Piece, Gol D. Roger era conhecido como o “Rei dos Piratas”, o ser mais forte e infame que navegou na Grand Line. A captura e execução de Roger pelo Governo Mundial trouxe uma mudança em todo o mundo. Suas últimas palavras antes de sua morte revelaram a existência do maior tesouro do mundo, One Piece. Foi essa revelação que trouxe a Grande Era dos Piratas, homens que sonhavam em encontrar One Piece – que promete uma quantidade ilimitada de riquezas e fama – e muito possivelmente o pináculo da glória e o título de Rei dos Piratas.</p>
+                <p>No mundo de One Piece, Gol D. Roger era conhecido como o “Rei dos Piratas”, o ser mais forte e infame
+                    que navegou na Grand Line. A captura e execução de Roger pelo Governo Mundial trouxe uma mudança em
+                    todo o mundo. Suas últimas palavras antes de sua morte revelaram a existência do maior tesouro do
+                    mundo, One Piece. Foi essa revelação que trouxe a Grande Era dos Piratas, homens que sonhavam em
+                    encontrar One Piece – que promete uma quantidade ilimitada de riquezas e fama – e muito
+                    possivelmente o pináculo da glória e o título de Rei dos Piratas.</p>
                 <div class="alert alert-warning configAlert" role="alert">
-                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">14</h6></button> Não recomendado para menores de 14
+                    <button type="button" class="btn btn-warning " disabled>
+                        <h6 class="display-6 fw-bold">14</h6>
+                    </button> Não recomendado para menores de 14
                 </div>
                 <p>Onde ler: MangáLivre</p>
             </div>
@@ -253,10 +271,12 @@
                 <h4 class="text-left">One Punch Man</h4><br>
                 <h6>304 Capitulos</h6><br>
                 <p>Conta o dia-a-dia de um herói normal que está infeliz por ser forte o bastante para derrotar
-                        todos os seus oponentes com apenas um soco, já que isso não lhe traz mais a sensação de
-                        adrenalina ao enfrentar um inimigo poderoso...</p>
+                    todos os seus oponentes com apenas um soco, já que isso não lhe traz mais a sensação de
+                    adrenalina ao enfrentar um inimigo poderoso...</p>
                 <div class="alert alert-warning configAlert" role="alert">
-                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">14</h6></button> Não recomendado para menores de 14
+                    <button type="button" class="btn btn-warning " disabled>
+                        <h6 class="display-6 fw-bold">14</h6>
+                    </button> Não recomendado para menores de 14
                 </div>
                 <p>Onde ler: MangáLivre</p>
             </div>
@@ -270,11 +290,23 @@
             <div class="col-md-6" id="snk">
                 <h4 class="text-left">Shingeki no Kyojin</h4><br>
                 <h6>243 Capitulos</h6><br>
-                <p>Centenas de anos atrás, surgiram criaturas horríveis que se assemelhavam a humanos. Esses gigantes imponentes e estúpidos, chamados de “titãs”, provaram ser uma ameaça existencial, pois atacavam todos os humanos que encontravam para satisfazer um apetite aparentemente interminável. Incapaz de combater efetivamente os titãs, a humanidade foi forçada a se barricar dentro de grandes paredes que cercam o que pode muito bem ser o último porto seguro da humanidade no mundo.
+                <p>Centenas de anos atrás, surgiram criaturas horríveis que se assemelhavam a humanos. Esses gigantes
+                    imponentes e estúpidos, chamados de “titãs”, provaram ser uma ameaça existencial, pois atacavam
+                    todos os humanos que encontravam para satisfazer um apetite aparentemente interminável. Incapaz de
+                    combater efetivamente os titãs, a humanidade foi forçada a se barricar dentro de grandes paredes que
+                    cercam o que pode muito bem ser o último porto seguro da humanidade no mundo.
 
-                Nos dias de hoje, a vida dentro das muralhas finalmente encontrou paz, já que os moradores não lidam com titãs há muitos anos. Eren Yeager, Mikasa Ackerman e Armin Arlert são três crianças que sonham em experimentar tudo o que o mundo tem a oferecer, tendo crescido ouvindo histórias das maravilhas além das paredes. Mas quando o estado de tranquilidade é repentinamente destruído pelo ataque de um gigantesco titã de 60 metros, eles aprendem rapidamente o quão cruel o mundo pode ser. Naquele dia, Eren promete a si mesmo que fará o que for preciso para erradicar todos os titãs da face da Terra, com a esperança de que um dia a humanidade possa mais uma vez viver fora dos muros sem medo.</p>
+                    Nos dias de hoje, a vida dentro das muralhas finalmente encontrou paz, já que os moradores não lidam
+                    com titãs há muitos anos. Eren Yeager, Mikasa Ackerman e Armin Arlert são três crianças que sonham
+                    em experimentar tudo o que o mundo tem a oferecer, tendo crescido ouvindo histórias das maravilhas
+                    além das paredes. Mas quando o estado de tranquilidade é repentinamente destruído pelo ataque de um
+                    gigantesco titã de 60 metros, eles aprendem rapidamente o quão cruel o mundo pode ser. Naquele dia,
+                    Eren promete a si mesmo que fará o que for preciso para erradicar todos os titãs da face da Terra,
+                    com a esperança de que um dia a humanidade possa mais uma vez viver fora dos muros sem medo.</p>
                 <div class="alert alert-danger configAlert" role="alert">
-                    <button type="button" class="btn btn-danger " disabled><h6 class="display-6 fw-bold">16</h6></button> Não recomendado para menores de 16
+                    <button type="button" class="btn btn-danger " disabled>
+                        <h6 class="display-6 fw-bold">16</h6>
+                    </button> Não recomendado para menores de 16
                 </div>
                 <p>Onde ler: MangáLivre</p>
             </div>
@@ -295,7 +327,9 @@
                     decidir sob sua sobrevivência, 13 humanos enfrentarão 13 deuses. Serão este humanos capazes de
                     colidir com as poderosas divindades?</p>
                 <div class="alert alert-danger configAlert" role="alert">
-                    <button type="button" class="btn btn-danger " disabled><h6 class="display-6 fw-bold">16</h6></button> Não recomendado para menores de 16
+                    <button type="button" class="btn btn-danger " disabled>
+                        <h6 class="display-6 fw-bold">16</h6>
+                    </button> Não recomendado para menores de 16
                 </div>
                 <p>Onde ler: MangáLivre</p>
             </div>
@@ -309,32 +343,41 @@
             <div class="col-md-6" id="vs">
                 <h4 class="text-left">Vinland Saga</h4><br>
                 <h6>206 Capitulos</h6><br>
-                <p>Thorfinn é filho de Thors, um lendário guerreiro viking, mas que após anos no campo de batalha, descobre uma coisa mais maravilhosa que matar seus iguais. Viver sua própria vida, em paz. Mas os ventos lhe trazem uma notícia que atrapalhará seus dias de paz, e Thorfinn, seu filho, pouco sabe desta vida passada de guerra de seu pai. Após descobrir o passado de seu pai, Thorfinn se revolta contra ele, e sai para a guerra junto de seu pai, mas quando reconhece o verdadeiro valor dele, já é tarde demais. Agora Thorfinn deverá seguir sua própria vida, seguindo valores que seu pai lhe ensinou, mas sem perder sua coragem. Este é só o começo desta grande saga de Thorfinn que acompanha os Vikings no século XI!</p>
+                <p>Thorfinn é filho de Thors, um lendário guerreiro viking, mas que após anos no campo de batalha,
+                    descobre uma coisa mais maravilhosa que matar seus iguais. Viver sua própria vida, em paz. Mas os
+                    ventos lhe trazem uma notícia que atrapalhará seus dias de paz, e Thorfinn, seu filho, pouco sabe
+                    desta vida passada de guerra de seu pai. Após descobrir o passado de seu pai, Thorfinn se revolta
+                    contra ele, e sai para a guerra junto de seu pai, mas quando reconhece o verdadeiro valor dele, já é
+                    tarde demais. Agora Thorfinn deverá seguir sua própria vida, seguindo valores que seu pai lhe
+                    ensinou, mas sem perder sua coragem. Este é só o começo desta grande saga de Thorfinn que acompanha
+                    os Vikings no século XI!</p>
                 <div class="alert alert-danger configAlert" role="alert">
-                    <button type="button" class="btn btn-danger " disabled><h6 class="display-6 fw-bold">16</h6></button> Não recomendado para menores de 16
+                    <button type="button" class="btn btn-danger " disabled>
+                        <h6 class="display-6 fw-bold">16</h6>
+                    </button> Não recomendado para menores de 16
                 </div>
                 <p>Onde ler: MangáLivre</p>
             </div>
             <hr class="linha">
         </div>
-            <hr class="linha">
-        </div>
-        <nav aria-label="Page navigation example">
-          <ul class="pagination justify-content-center">
+        <hr class="linha">
+    </div>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
             <li class="page-item">
-              <a class="page-link" href="acao.html" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-              </a>
+                <a class="page-link" href="acao.html" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
             </li>
             <li class="page-item"><a class="page-link" href="acao.html">1</a></li>
             <li class="page-item"><a class="page-link" href="#">2</a></li>
             <li class="page-item">
-              <a class="page-link" href="#" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-              </a>
+                <a class="page-link" href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
             </li>
-          </ul>
-        </nav>
+        </ul>
+    </nav>
     </div>
     <!-- Fim container mangás-->
 
